# robot_asservissement

./: .gitignore  Asservissement.cpp  Asservissement.h  CMakeLists.txt  FakeCodeur.cpp  Point.h  README.md  SerialCodeurManager.cpp  asservt.cpp  config.info  log_assangle.txt  main.cpp
controller/: Config.cpp  Config.h  Configuration.cpp  Controller.cpp  Controller.h  FakeCodeur.h  MathUtils.cpp  MathUtils.h  Odometry.cpp  Odometry.h  PID.cpp  PID.h  Point.cpp  Point.h  PositionController.cpp  PositionController.h  QuadrampDerivate.cpp  SerialCodeurManager.cpp  VelocityController.cpp  VelocityController.h  asservt.cpp  config.info  log.txt  log2.txt  log_last.txt  log_ligne_1800mm.txt
fileaction/: Fermer2BDeux.as  FermerPince_DeuxBouées_D.as  FermerPince_DeuxBouées_G.as
src/: Controller.cpp  Controller.h  FichierPoint.cpp  Odometry.cpp  Odometry.h  Point.cpp  Point.h  QuadrampDerivate.cpp  Timering.cpp
src/main/: action.cpp  asservt.cpp  testUdp.cpp
